Megamenu Z-index fixed

--- a/public/web_assets/css/style.css
+++ b/public/web_assets/css/style.css
@@ -781,6 +781,7 @@ header .btn.transparent, .btn.solid:hover {
     padding-top: 50px;
     padding-bottom: 50px;
     background: #ffffff;
+    z-index: 999999;
 }
 
 .font-30 {
